# escli-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  agents.md
.cargo/: config.toml
.github/workflows/: build.yml  publish-docker.yml  release.yml
escli/: Cargo.toml  build.rs
escli/staticcmds/: Cargo.toml
escli/staticcmds/src/: dump.rs  lib.rs  load.rs
escli/tests/: cli.rs
generator/: Cargo.toml
generator/src/: cli.rs  cmd.rs  endpoint.rs  enumeration.rs  esclierror.rs  field.rs  main.rs  module.rs  namespace.rs  path_parameter.rs
tapes/: bulk.tape  dump.tape  esql.tape  info.tape  search.tape
