[workspace]
resolver = "3"
members = ["escli", "generator", "escli/staticcmds"]

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = "z"
panic = "abort"

[workspace.dependencies]
clients_schema = { git = "https://github.com/elastic/elasticsearch-specification.git", branch = "main" }
anyhow = "1.0.98"
async-trait = "0.1.88"
atty = "0.2.14"
clap = { version = "4.5.39", features = ["cargo", "env", "derive", "wrap_help"] }
clap_complete = { version = "4.5.52", features = ["unstable-dynamic"] }
color-print = "0.3.7"
convert_case = "0.8.0"
dotenv = "0.15.0"
elasticsearch = { version = "9.0.0-alpha.1", default-features = false, features = ["rustls-tls"] }
erased-serde = "0.4.6"
genco = "0.17.10"
http = "1.3.1"
regex = "1.11.1"
reqwest = { version = "0.12.19", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
tokio = { version = "1.47.1", features = [
    "io-std",
    "macros",
    "rt-multi-thread",
] }