[package]
name = "escli"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "escli"
path = "src/main.rs"

[dependencies]
staticcmds = { path = "staticcmds" }

async-trait = { workspace = true }
atty = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
color-print = { workspace = true }
dotenv = { workspace = true }
elasticsearch = { workspace = true }
erased-serde = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
tokio = { workspace = true }