[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
clients_schema = { workspace = true }
async-std = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
genco = { workspace = true }
reqwest = { workspace = true }
convert_case = { workspace = true }
regex = { workspace = true }
