[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
clients_schema = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
convert_case = { workspace = true }
genco = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }